<resources>
    <string name="app_name">PopularMovies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="pref_sortOrder">Sort order</string>
    <string name="pref_sortOrder_default">popularity.desc</string>
    <string name="pref_sortOrder_key">Sort</string>
    <string name="release_date_title">Release date</string>
    <string name="vote_avergae_title">Vote average</string>
    <string name="trailers_label">Trailers:</string>
    <string name="reviews_label">Reviews:</string>
    <string name="no_trailers">No trailers available</string>
    <string name="no_reviews">No reviews available</string>
</resources>
