<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daniel.popularmovies.DetailFragment">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/detailLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.example.daniel.popularmovies.DetailActivity">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageDetail"
                    android:layout_width="200dp"
                    android:layout_height="200dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/originalTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/release_date_title"
                        android:textColor="@color/lightGray"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/releaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/vote_avergae_title"
                        android:textColor="@color/lightGray"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/voteAverage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18dp" />

                    <Button
                        android:id="@+id/buttonFavorite"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:onClick="favorites"
                        android:text="Favorites"
                        android:tag="R.drawable.favoff" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"/>

            <LinearLayout
                android:id="@+id/trailersLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/trailersLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_trailers"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/reviewsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/reviewsLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_reviews"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/reviews_label"
                    android:id="@+id/reviewsButton"
                    android:visibility="gone"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
